# 2048

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  main.cpp  main.h  menus.cpp  menus.h  readme.md
.github/workflows/: build.yml  release.yml
docs/: preview-screenshots.md  project-architecture.md  project-compilation.md  project-libraries.md  project-structure.md  readme.md
include/: GameController.h  GameMatrix.h  GameMatrixActions.h  GameUI.h  Matrix.h  MatrixActions.h  Menu.h  ScreenNames.h  config.h.in  global.h
include/Game/: GameController.h  GameMatrix.h  GameUI.h
include/Menu/: Menu.h  MenuAction.h  MenuFactory.h  MenuUI.h
include/Screen/: Screen.h  ScreenFactory.h  ScreenManager.h  ScreenUI.h
include/UI/: UI.h
include/core/: Core.h  CoreMatrix.h  CoreScore.h  GameMatrix.h
include/interface/: BannerInterface.h  DialogInterface.h  Interface.h  MatrixInterface.h  MenuInterface.h  TerminalInterface.h  TitleInterface.h  WindowInterface.h
include/libraries/Game/: GameController.h  GameMatrix.h  GameUI.h
include/libraries/Menu/: Menu.h  MenuAction.h  MenuUI.h
include/libraries/Screen/: Screen.h  ScreenManager.h  ScreenSignal.h  ScreenStore.h
include/libraries/UI/: UI.h
include/screens/: AboutScreen.h  ExitScreen.h  GameScreen.h  MainScreen.h
include/screens/game/: GameOverScreen.h  GamePlayScreen.h
include/ui/: GameUI.h  MenuUI.h  ScreenUI.h  UI.h
src/: CMakeLists.txt  GameApplication.cpp  GameController.cpp  GameMatrix.cpp  GameMatrixActions.cpp  GameUI.cpp  Matrix.cpp  MatrixActions.cpp  Menu.cpp  MenuAction.cpp  Screen.cpp  main.cpp
src/Game/: GameController.cpp  GameMatrix.cpp  GameUI.cpp
src/Menu/: Menu.cpp  MenuAction.cpp  MenuUI.cpp
src/Screen/: Screen.cpp  ScreenUI.cpp
src/UI/: UI.cpp
src/core/: Core.cpp  CoreMatrix.cpp  CoreScore.cpp  GameMatrix.cpp
src/interface/: BannerInterface.cpp  DialogInterface.cpp  Interface.cpp  MatrixInterface.cpp  MenuInterface.cpp  TerminalInterface.cpp  TitleInterface.cpp  WindowInterface.cpp
src/libraries/Game/: GameController.cpp  GameMatrix.cpp  GameUI.cpp
src/libraries/Menu/: Menu.cpp  MenuAction.cpp  MenuFactory.cpp  MenuUI.cpp
src/libraries/Screen/: Screen.cpp  ScreenFactory.cpp  ScreenManager.cpp  ScreenStore.cpp  ScreenUI.cpp
src/libraries/UI/: UI.cpp
src/screens/: AboutScreen.cpp  ExitScreen.cpp  GameScreen.cpp  GameScreen.h  MainScreen.cpp  MainScreen.h
src/screens/game/: GameOverScreen.cpp  GamePlayScreen.cpp
src/ui/: GameUI.cpp  MenuUI.cpp  ScreenUI.cpp  UI.cpp
tests/: CMakeLists.txt  GameMatrix.cpp
tests/core/: CMakeLists.txt  GameMatrixTest.cpp
